@@ -1,3 +1,8 @@
+2014-12-05  David Edelsohn  <dje.gcc@gmail.com>
+
+	* config/rs6000/xcoff.h (ASM_OUTPUT_ALIGNED_LOCAL): Append
+	alignment to section name. Increase default alignment to word.
+
 2014-12-05  Martin Jambor  <mjambor@suse.cz>
 
 	* cgraph.h (cgraph_node): New method expand_all_artificial_thunks.
